# iws

./: .gitignore  Cargo.toml  README.md
src/: claude.rs  cli.rs  config.rs  git.rs  main.rs  spec.rs  tui.rs  workspace.rs
src/commands/: done.rs  init.rs  list.rs  mod.rs  new.rs  open.rs  pr.rs  repo.rs  status.rs
