[package]
name = "iws"
version = "0.1.0"
edition = "2021"
description = "Multi-repo workspace manager — git worktree orchestration for multi-repo projects"
license = "MIT"
repository = "https://github.com/ne2030/iws"
keywords = ["git", "worktree", "monorepo", "workspace", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
colored = "2"
chrono = "0.4"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
